# GPT-API-TAS

./: Dockerfile  pyproject.toml  requirements.txt
app/: main.py
app/core/: config.py
app/models/: models.py
app/repository/: get_info_from_context.py  llm.py  open_api.py
app/routes/: base.py
app/routes/apis/v1/: open_api.py
data/: context.txt
objectbox/: data.mdb  lock.mdb
