[project]
name = "gpt-api-tas"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]==0.115.4",
    "langchain-community==0.0.38",
    "langchain-core==0.1.53",
    "langchain-objectbox==0.1.0",
    "langchain-openai==0.1.7",
    "langchain-text-splitters==0.0.2",
    "langchain==0.1.20",
    "langchainhub==0.1.21",
    "openai==1.55.3",
    "pydantic-settings==2.6.1",
    "requests==2.32.3",
]
